correcting authentification